syntax = "proto3";

// 指定在proto文件中定义的所有消息、枚举和服务在生成java类的时候都会生成对应的java类文件，而不是以内部类的形式出现
option java_multiple_files = true;
// 指定生成的java类所在的包， 如果在.proto文件中没有提供明确的 java_package 选项，那么默认情况下，将使用 proto 包
option java_package = "test.grpc.grpc";
// 指定生成的java类文件名称，如果不指定则会默认使用 .proto 文件的文件名称
//option java_outer_classname = "XAccessGrpc";
//option objc_class_prefix = "HLW";

package grpc;

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}